crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_var_local_infers_mixed_from_a_mixed_initializer.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn pick(object, tagged) -> tagged {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; tagged
    ; stmt s0 @4:5-4:17
    retain v1
    ; stmt s1 @5:5-5:15
    release v0
    release v1
    return v1
}
