crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__an_enum_case_lowers_to_a_constant_and_as_int_is_free.snap
---
source: crates/nvs-ir/src/lower/tests.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> tagged {
  bb0:
    safepoint
    ; stmt s0 @3:1-3:28
    v0 = const.int 2  ; enum:int
    v1 = reinterpret v0  ; int
    v2 = const.null  ; null
    v3 = tag v2  ; tagged
    return v3
}
