crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__an_indented_heredoc_strips_the_closing_markers_indentation.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-7:13
    v1 = const.str "hello\nworld"  ; string
    release v1
    release v0
    return
}
