crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__an_indented_interpolated_heredoc_strips_indentation_from_every_run.snap
---
source: crates/nvs-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:22
    v1 = const.str "hi"  ; string
    ; stmt s1 @5:5-8:13
    v2 = const.str "pre "  ; string
    v3 = const.str "\npost"  ; string
    v4 = concat v2, v1, v3  ; string
    release v2
    release v3
    release v4
    release v0
    release v1
    return
}
