crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__an_instance_method_call_through_a_local_receiver.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @9:5-9:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @10:5-10:26
    retain v1
    v2 = call Foo::greet(this: v1) ! bb2  ; int
    release v1
    release v0
    return v2
  bb1:
    release v0
    propagate "m() at t.nvs:9"
  bb2:
    release v1
    release v0
    propagate "m() at t.nvs:10"
}
